introduction of corrections to the readability and correctness of the code

--- a/client/src/style/first.scss
+++ b/client/src/style/first.scss
@@ -9,5 +9,24 @@
     word-wrap: break-word;
     position: fixed;
     top: 18em;
-    overflow: scroll;
+    overflow: auto;
+}
+
+.scroll::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #111;
+	border-radius: 10px;
+}
+
+.scroll::-webkit-scrollbar
+{
+	width: 8px;
+	background-color: #000;
+}
+
+.scroll::-webkit-scrollbar-thumb
+{
+	background: #222;
+	border-radius: 10px;
 }
