--- a/client/src/style/newstyle.scss
+++ b/client/src/style/newstyle.scss
@@ -114,13 +114,14 @@ h6 {
     margin: 1em;
     padding: 1em;
     cursor: pointer;
-}
-
-.ans:hover {
+    
+    &:hover {
     border: 0.3em solid #ccc;
     padding: 0.8em;
     font-weight: 1000;
+    }
 }
+
 
 .style {
     margin-top: 4em;
