--- a/client/src/style/second.scss
+++ b/client/src/style/second.scss
@@ -2,5 +2,5 @@
     position: fixed;
     top: 18em;
     width: 100%;
-    overflow: scroll;
+    overflow: auto;
 }
